<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_test" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_notifications_none_24"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_secrecy"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/title_secrecy" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_location_searching_24"
        android:title="@string/title_appointment" />



    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

</menu>