<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_secrecy">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pr11_deepsea.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pr11_deepsea.ui.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_secrecy"
        android:name="com.example.pr11_deepsea.ui.SecrecyFragment"
        android:label="@string/title_secrecy"
        tools:layout="@layout/fragment_secrecy" />

    <fragment
    android:id="@+id/navigation_notifications"
    android:name="com.example.pr11_deepsea.ui.NotificationsFragment"
    android:label="@string/title_notifications"
    tools:layout="@layout/fragment_notifications" />




    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pr11_deepsea.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>