<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@android:color/transparent"
    tools:context=".ui.HomeFragment">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="Take Test"
                style="@style/TextColor"
                />

           <!-- <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/take_test"
                    android:textAlignment="center"
                    style="@style/TextColor"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>-->

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:columnCount="2"
                android:rowCount="4">

                <androidx.cardview.widget.CardView

                    android:id="@+id/testScreenTestAnxiety1"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_columnWeight="1"
                    android:background="@drawable/round_corner_background"
                   >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/anxiety"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_anxiety" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/testScreenTestDepression1"
                    android:layout_gravity="fill"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="10dp"
                    android:layout_columnWeight="1"
                    android:background="@drawable/round_corner_background">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/depression"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_depression" />

                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView

                    android:id="@+id/txtautism"
                    android:layout_gravity="fill"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_corner_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Personality\nDisorder"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_personality" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/txtsucidality"
                    android:layout_gravity="fill"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_corner_background">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/suicidality"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_suicide" />

                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView

                    android:id="@+id/txteatingdisorder"
                    android:layout_gravity="fill"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_corner_background">



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/eating_disorder"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_eatingdisorder" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/txtdissociation"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/round_corner_background">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/dissociation"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_dissociation" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/txtadhd"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/round_corner_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/adhd"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_adhd" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/txtsleep"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/round_corner_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/testSleep"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:drawableTopCompat="@drawable/test_sleep" />


                </androidx.cardview.widget.CardView>

            </GridLayout>
        </LinearLayout>

</ScrollView>